Refactor project structure, update README, and enhance documentation
Co-authored-by: lijiechengbj <lijiechengbj@kanyun.com>